// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdvancedSearchRow should render default view 1`] = `
<div
  className="columns is-gapless is-mobile is-multiline advancedSearchRow"
>
  <div
    className="column is-3-tablet"
  >
    <SelectField
      autoWidth={false}
      disabled={false}
      errorText="Please select a field to search"
      fullWidth={true}
      multiple={false}
      onChange={[Function]}
      value="0"
    >
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={true}
        focusState="none"
        insetChildren={false}
        key="0"
        primaryText="Select a field"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="0"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="all"
        primaryText="Any field"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="all"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_title"
        primaryText="Title"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_title"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_pid"
        primaryText="PID"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_pid"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_author"
        primaryText="Author Name"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_author"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_contributor"
        primaryText="Editor/Contributor"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_contributor"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_series"
        primaryText="Series"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_series"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_journal_name"
        primaryText="Journal Name"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_journal_name"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_conference_name"
        primaryText="Conference Name"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_conference_name"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_book_title"
        primaryText="Book Title"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_book_title"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_doc_type"
        primaryText="Publication type"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_doc_type"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_doi"
        primaryText="DOI"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_doi"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_publisher"
        primaryText="Publisher"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_publisher"
      />
    </SelectField>
  </div>
  <div
    className="column is-narrow spacer"
  />
  <div
    className="column input is-12-mobile"
  >
    <TextField
      aria-label="Select a field to search on"
      disabled={true}
      errorText={null}
      floatingLabelFixed={false}
      fullWidth={true}
      hintText="Select a field to search on"
      id="searchField"
      multiLine={false}
      name="textSearchField0"
      onChange={[Function]}
      rows={1}
      type="search"
      underlineShow={true}
      value=""
    />
  </div>
</div>
`;

exports[`AdvancedSearchRow should render search field row with given disabled options 1`] = `
<div
  className="columns is-gapless is-mobile is-multiline advancedSearchRow"
>
  <div
    className="column is-3-tablet"
  >
    <SelectField
      autoWidth={false}
      disabled={false}
      errorText={null}
      fullWidth={true}
      multiple={false}
      onChange={[Function]}
      value="all"
    >
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={true}
        focusState="none"
        insetChildren={false}
        key="0"
        primaryText="Select a field"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="0"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={true}
        focusState="none"
        insetChildren={false}
        key="all"
        primaryText="Any field"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="all"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_title"
        primaryText="Title"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_title"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_pid"
        primaryText="PID"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_pid"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_author"
        primaryText="Author Name"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_author"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_contributor"
        primaryText="Editor/Contributor"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_contributor"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_series"
        primaryText="Series"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_series"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_journal_name"
        primaryText="Journal Name"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_journal_name"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_conference_name"
        primaryText="Conference Name"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_conference_name"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_book_title"
        primaryText="Book Title"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_book_title"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_doc_type"
        primaryText="Publication type"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_doc_type"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_doi"
        primaryText="DOI"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_doi"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_publisher"
        primaryText="Publisher"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_publisher"
      />
    </SelectField>
  </div>
  <div
    className="column is-narrow combiner"
  >
    <span>
      contains
    </span>
  </div>
  <div
    className="column input is-12-mobile"
  >
    <TextField
      aria-label="Add some text to search all fields with"
      disabled={false}
      errorText={null}
      floatingLabelFixed={false}
      fullWidth={true}
      hintText="Add some text to search all fields with"
      id="searchField"
      multiLine={false}
      name="textSearchField0"
      onChange={[Function]}
      rows={1}
      type="search"
      underlineShow={true}
      value="i feel lucky"
    />
  </div>
</div>
`;

exports[`AdvancedSearchRow should render search field row with select field and search text 1`] = `
<div
  className="columns is-gapless is-mobile is-multiline advancedSearchRow"
>
  <div
    className="column is-3-tablet"
  >
    <SelectField
      autoWidth={false}
      disabled={false}
      errorText={null}
      fullWidth={true}
      multiple={false}
      onChange={[Function]}
      value="all"
    >
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={true}
        focusState="none"
        insetChildren={false}
        key="0"
        primaryText="Select a field"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="0"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="all"
        primaryText="Any field"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="all"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_title"
        primaryText="Title"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_title"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_pid"
        primaryText="PID"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_pid"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_author"
        primaryText="Author Name"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_author"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_contributor"
        primaryText="Editor/Contributor"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_contributor"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_series"
        primaryText="Series"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_series"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_journal_name"
        primaryText="Journal Name"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_journal_name"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_conference_name"
        primaryText="Conference Name"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_conference_name"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_book_title"
        primaryText="Book Title"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_book_title"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_doc_type"
        primaryText="Publication type"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_doc_type"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_doi"
        primaryText="DOI"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_doi"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_publisher"
        primaryText="Publisher"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_publisher"
      />
    </SelectField>
  </div>
  <div
    className="column is-narrow combiner"
  >
    <span>
      contains
    </span>
  </div>
  <div
    className="column input is-12-mobile"
  >
    <TextField
      aria-label="Add some text to search all fields with"
      disabled={false}
      errorText={null}
      floatingLabelFixed={false}
      fullWidth={true}
      hintText="Add some text to search all fields with"
      id="searchField"
      multiLine={false}
      name="textSearchField0"
      onChange={[Function]}
      rows={1}
      type="search"
      underlineShow={true}
      value="i feel lucky"
    />
  </div>
</div>
`;
